--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Cayman Blog Theme
+title: Unckless Lab Notebook
 description: Cayman Blog Theme is a clean, responsive blogging theme for Jekyll and Gitlab/GitHub Pages.
 show_downloads: true
 
